samples/_failures_safe/1761652598_3f8f0e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1785fece.c: In function ‘main’:
./samples/SAFE/__tmp_1785fece.c:134:9: error: incompatible types when assigning to type ‘struct Matrix’ from type ‘struct Matrix (*)(size_t,  size_t)’ {aka ‘struct Matrix (*)(long unsigned int,  long unsigned int)’}
  134 |     a = create_matrix
      |         ^~~~~~~~~~~~~
./samples/SAFE/__tmp_1785fece.c:134:22: error: expected ‘;’ at end of input
  134 |     a = create_matrix
      |                      ^
      |                      ;
./samples/SAFE/__tmp_1785fece.c:134:5: error: expected declaration or statement at end of input
  134 |     a = create_matrix
      |     ^
